cleanup css and fix spacing in slide in menu

--- a/src/css/modules/nextup.scss
+++ b/src/css/modules/nextup.scss
@@ -9,64 +9,53 @@
     background-color: #ffffff;
     border-top: 7px solid #f0f0f0;
     border-bottom: 1px solid #e2e3e4;
-
     &.plus-segments {
         margin-bottom: 0 !important;
     }
-
     .wbmd-segment {
-      font-family: 'Lato', Arial, sans-serif;
-      font-weight: bold;
-      font-size: 1.2em;
-      line-height: 1.2em;
-      color: #333132;
-
-      a {
+        font-family: 'Lato', Arial, sans-serif;
+        font-weight: bold;
+        font-size: 1.2em;
+        line-height: 1.2em;
         color: #333132;
-      }
-    }
-
-    .wbmd-subhead {
-      font-family: 'Roboto Condensed', Arial, sans-serif;
-      font-size: 0.8em;
-      text-transform: uppercase;
-      color: #74b0b0;
-      padding-top: 22px;
-      padding-bottom: 10px;
-    }
-
-    .wbmd-nav-links {
-      div {
-        padding-top: 18px;
-
         a {
-            display: block;
-            font-family: 'Chivo', Arial, sans-serif;
-            font-size: 1em;
-            line-height: 1.2em;
-            color: #3b3b3c;
-            padding: 0;
-            margin: 0;
+            color: #333132;
         }
-      }
-
-      div:first-child {
-        padding-top: 0px;
-      }
-      
     }
-
+    .wbmd-subhead {
+        font-family: 'Roboto Condensed', Arial, sans-serif;
+        font-size: 0.8em;
+        text-transform: uppercase;
+        color: #74b0b0;
+        padding-top: 22px;
+        padding-bottom: 10px;
+    }
+    .wbmd-nav-links {
+        div {
+            padding-top: 18px;
+            a {
+                display: block;
+                font-family: 'Chivo', Arial, sans-serif;
+                font-size: 1em;
+                line-height: 1.2em;
+                color: #3b3b3c;
+                padding: 0;
+                margin: 0;
+            }
+        }
+        div:first-child {
+            padding-top: 0px;
+        }
+    }
     .wbmd-see-all {
         display: none;
         padding-top: 22px;
-
         a {
             font-family: 'Chivo', Arial, sans-serif;
             font-size: 0.9em;
             color: #1b88bf;
         }
     }
-
     &.hide {
         display: none !important;
     }
@@ -76,64 +65,74 @@
     position: relative;
     background-color: #ffffff;
     width: 100%;
-
     > div:last-child {
         margin-bottom: 1em;
     }
-
     .wbmd-segment-container {
         border-bottom: 1px solid #e2e3e4;
-
         .wbmd-segment {
-          width: 100%;
-          padding: 14px 5px;
-
-          a.wbmd-segment-title {
-            font-family: 'Lato', Arial, sans-serif;
-            font-weight: bold;
-            font-size: 1.2em;
-            line-height: 1.2em;
-            color: #333132;
-          }
+            width: 100%;
+            padding: 14px 5px;
+            a.wbmd-segment-title {
+                font-family: 'Lato', Arial, sans-serif;
+                font-weight: bold;
+                font-size: 1.2em;
+                line-height: 1.2em;
+                color: #333132;
+            }
         }
     }
 }
 
 .wbmd-menu-content {
+    padding: 14px;
     .article-list-container {
-        padding: 14px;
+        padding: 0px 35px 14px 0px;
         border-top: none;
-
         .wbmd-segment {
-           padding-right: 35px;
-           font-size: 18px;
-           line-height: 22px;
+            font-size: 18px;
+            line-height: 22px;
         }
-
         .wbmd-subhead {
-          font-size: 12px;
+            font-size: 12px;
         }
-
         .wbmd-nav-links {
-          div {
-            padding-top: 22px;
-
-            a {
-                font-size: 16px;
-                line-height: 21px;
+            div {
+                padding-top: 22px;
+                a {
+                    font-size: 16px;
+                    line-height: 21px;
+                }
             }
-          }
+            div:first-child {
+                padding-top: 0px;
+            }
+        }
+    }
+    .wbmd-upnext-segments {
+        .wbmd-segment-container {
+            padding: 14px 35px 14px 0px;
+            .wbmd-segment {
+                padding: 0;
+                a.wbmd-segment-title {
+                    font-family: 'Lato', Arial, sans-serif;
+                    font-size: 18px;
+                    line-height: 22px;
+                }
+            }
         }
     }
 }
 
-.no-touch .article-list-container, .no-touch .wbmd-upnext-segments {
+.no-touch .article-list-container,
+.no-touch .wbmd-upnext-segments {
     a:hover {
         text-decoration: underline !important;
     }
 }
 
-.funded-editorial-see-all .article-list-container, .funded-editorial-see-all .wbmd-upnext-segments {
+.funded-editorial-see-all .article-list-container,
+.funded-editorial-see-all .wbmd-upnext-segments {
     display: none !important;
 }
 
@@ -152,6 +151,7 @@
     }
 }
 
+
 /* Tablets, iPads (portrait and landscape) ----------- */
 
 @media only screen and (min-width: 768px) {
@@ -165,6 +165,7 @@
         }
     }
 }
+
 
 /* Tablets, iPads (portrait) ----------- */
 
